@@ -3,18 +3,17 @@ package technology.nrkk.demo.front.services;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.util.Assert;
-import reactor.core.publisher.Mono;
 import technology.nrkk.demo.front.entities.Cart;
 import technology.nrkk.demo.front.entities.CartItem;
 import technology.nrkk.demo.front.entities.User;
 import technology.nrkk.demo.front.models.CartItemVO;
 import technology.nrkk.demo.front.models.CartVO;
+import technology.nrkk.demo.front.models.Product;
 import technology.nrkk.demo.front.repositories.CartRepository;
 import technology.nrkk.demo.front.webclient.CatalogueClient;
 
 import java.util.*;
 import java.util.concurrent.ExecutionException;
-import java.util.stream.Collectors;
 
 @Service
 public class CartService {
@@ -54,15 +53,19 @@ public class CartService {
         return newCart;
     }
 
-    public Mono<CartVO> getCartVo(Cart cart) {
-        return Mono.zip(cart.getItems().stream().map(item -> {
+    public CartVO getCartVo(Cart cart) {
+        List<CartItemVO> list = cart.getItems().stream().map(item -> {
             String productId = item.getProductId();
-            return client.get(productId, cart.getUser()).map(product ->new CartItemVO(item, product));
-        }).collect(Collectors.toList()), (list)->{
-                    Set<CartItemVO> items = Arrays.stream(list).map(obj->(CartItemVO) obj).collect(Collectors.toSet());
-                    CartVO result = new CartVO(cart);
-                    result.setItems(items);
-                    return result;
-                });
+            try {
+                Product product = client.get(productId, cart.getUser());
+                return new CartItemVO(item, product);
+            } catch (CatalogueClient.CatalogueClientException e) {
+                throw new RuntimeException(e);
+            }
+        }).toList();
+        Set<CartItemVO> items = new HashSet<>(list);
+        CartVO result = new CartVO(cart);
+        result.setItems(items);
+        return result;
     }
 }
